--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link rel="stylesheet" href="style.css">
 
 </head>
-<h1>Pets</h1>
+<h1>Kelsey Kim</h1>
 <body>
 
-<p>Mochi the doodle</p>
-<img src="Chidi Pizza.jpg" alt="Chidi in his pizza costume">
+<p>Final Project on Netflix Daily Top 10s</p>
+<img src="Chidi Pizza.jpg" alt="black cat in pizza costume">
 <p>He looks <em>so cute</em> with his costume!</p>
 <p>Check out my Youtube page <a href="http://www.youtube.com">Link to Youtube</a></p>
 
